<resources>

    <!--Bottom Nav-->
    <string name="nav_menu_home">Beranda</string>
    <string name="nav_menu_cart">Keranjang</string>
    <string name="nav_menu_profile">Akun</string>
    <string name="nav_menu_cd_home">Beranda</string>
    <string name="nav_menu_cd_cart">Keranjang</string>
    <string name="nav_menu_cd_profile">Akun</string>

    <!--Register-->
    <string name="register_password_weak">Kata Sandi Lemah</string>
    <string name="register_password_medium">Kekuatan Kata sandi Sedang</string>
    <string name="register_password_strong">Kata Sandi Kuat</string>
    <string name="register_password_very_strong">Kata Sandi Sangat Kuat</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_hint">Mau cari ikan apa nih?</string>
    <string name="variant_fish">Jenis ikan</string>
    <string name="price">Harga</string>
    <string name="available">Ketersediaan</string>
    <string name="nama">Nama ikan</string>
    <string name="label_area">Tersedia untuk area</string>
    <string name="order">Pesan sekarang</string>
    <string name="area">Area</string>
    <string name="search_hint_area">Cari Kota</string>
    <string name="login">Masuk</string>
    <string name="komoditas">Komoditas</string>
    <string name="metode_serah_terima">Metode Serah terima</string>
    <string name="rincian">Rincian pemesanan</string>
    <string name="jumlah_pesanan">Jumlah pesanan (Kg)</string>
    <string name="imput_kode_promo">Input kode promo</string>
    <string name="kode_promo">Kode Promo</string>
    <string name="name">Nama</string>
    <string name="input_name">Nama lengkap</string>
    <string name="hp">No. Hanphone</string>
    <string name="domisili">Domisili</string>
    <string name="informasi_penerima">Informasi Penerima</string>
    <string name="title">Formulir Pemesanan</string>
    <string name="pesan">Pesan</string>
    <string name="pesanan">Pesanan mu</string>
    <string name="pesananmu">Pesanan mu</string>
    <string name="jumlah_pesanan_item">Jumlah Pesanan :</string>
    <string name="send_order">Dikirim dari</string>
    <string name="status">Status :</string>
    <string name="list_pesanan">Daftar Pesanan</string>
    <string name="enter_kode_promo">Masukan kode promo</string>
</resources>