<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Detail ikan segar"
        android:textColor="@color/jungle_green"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textAppearance="@style/TextAppearance.Roboto.Bold.Body1"
        android:drawableStart="@drawable/ic_baseline_keyboard_arrow_left_24"
        android:layout_marginTop="@dimen/screen_margin"/>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/ivFish"
        android:layout_width="match_parent"
        android:layout_height="@dimen/zero_margin"
        android:layout_marginStart="@dimen/screen_margin"
        android:layout_marginEnd="@dimen/screen_margin"
        android:src="@drawable/ikan"
        app:layout_constraintDimensionRatio="3:2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.Nunito.Bold.Body1"
        android:text="@string/nama"
        android:textColor="@color/dove_gray"
        app:layout_constraintTop_toBottomOf="@id/ivFish"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/screen_margin"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvStocklabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.Nunito.Bold.Body1"
        android:text="@string/available"
        android:textColor="@color/jungle_green"
        app:layout_constraintTop_toTopOf="@id/tvName"
        app:layout_constraintBottom_toBottomOf="@id/tvName"
       app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="@dimen/screen_margin"
        android:layout_marginStart="@dimen/screen_margin"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Rp.50000"
        android:textAppearance="@style/TextAppearance.Nunito.Bold.Body1"
        android:layout_marginTop="@dimen/normal_margin"
        app:layout_constraintTop_toBottomOf="@id/tvName"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/screen_margin"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvStock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="50"
        android:layout_marginEnd="@dimen/extra_huge_margin"
        android:textAppearance="@style/TextAppearance.Nunito.Bold.Body1"
        android:layout_marginTop="@dimen/normal_margin"
        app:layout_constraintTop_toTopOf="@id/tvPrice"
        app:layout_constraintBottom_toBottomOf="@+id/tvPrice"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="@dimen/screen_margin"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvLabelArea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_area"
        android:textColor="@color/jungle_green"
        android:letterSpacing="0"
        android:textAppearance="@style/TextAppearance.Nunito.Regular.Caption"
        android:layout_marginTop="@dimen/large_margin"
        app:layout_constraintTop_toBottomOf="@id/tvPrice"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/screen_margin"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvProvince"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:letterSpacing="0"
        android:textAppearance="@style/TextAppearance.Nunito.Regular.Body2"
        android:text="Jawa Barat - Bandung"
        android:layout_marginTop="@dimen/normal_margin"
        app:layout_constraintTop_toBottomOf="@id/tvLabelArea"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/screen_margin"/>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/order"
        app:icon="@drawable/ic_cart_outlined"
        app:iconGravity="textStart"
        android:textAllCaps="false"
        android:padding="@dimen/normal_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="@dimen/screen_margin"
        android:layout_marginStart="@dimen/screen_margin"/>

</androidx.constraintlayout.widget.ConstraintLayout>