<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/zircon"
    tools:context=".ui.home.HomeFragment">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvArea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/screen_margin"
        android:layout_marginTop="@dimen/normal_margin"
        android:text="@string/area"
        android:textColor="@color/jungle_green"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvProvince"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/screen_margin"
        android:layout_marginTop="@dimen/small_margin"
        android:drawableEnd="@drawable/ic_baseline_keyboard_arrow_down_24"
        android:text="Pilih Area kamu"
        android:textAppearance="@style/TextAppearance.Roboto.Bold.Body1"
        android:textColor="@color/jungle_green"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvArea" />

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/screen_margin"
        android:text="@string/login"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="@id/tvProvince"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvArea"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/vpBannerSlider"
        android:layout_width="@dimen/zero_margin"
        android:layout_height="@dimen/zero_margin"
        android:layout_marginTop="@dimen/screen_margin"
        android:background="@color/white"
        app:layout_constraintDimensionRatio="2:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvProvince" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tlBannerSlider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/normal_margin"
        android:background="@color/transparent"
        android:paddingBottom="@dimen/screen_margin"
        app:layout_constraintBottom_toBottomOf="@id/vpBannerSlider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:tabBackground="@drawable/indicator_slector"
        app:tabIndicatorHeight="@dimen/zero_margin">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </com.google.android.material.tabs.TabLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/variantFish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/large_margin"
        android:layout_marginTop="@dimen/screen_margin"
        android:text="@string/variant_fish"
        android:textAppearance="@style/TextAppearance.Nunito.Bold.Body1"
        android:textColor="@color/jungle_green"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vpBannerSlider" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/screen_margin"
        android:text="@string/available"
        android:textAppearance="@style/TextAppearance.Nunito.Bold.Body1"
        android:textColor="@color/jungle_green"
        app:layout_constraintBottom_toBottomOf="@id/variantFish"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/variantFish" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvFish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/screen_margin"
        android:layout_marginTop="@dimen/screen_margin"
        android:layout_marginEnd="@dimen/screen_margin"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/variantFish" />

</androidx.constraintlayout.widget.ConstraintLayout>