<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/zircon">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/screen_margin"
        android:layout_marginTop="@dimen/screen_margin"
        android:layout_marginEnd="@dimen/screen_margin"
        android:background="@drawable/bg_input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/screen_margin">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvKomoditas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/screen_margin"
                android:layout_marginTop="@dimen/screen_margin"
                android:text="ikan Gurame"
                android:textAppearance="@style/TextAppearance.Roboto.Black.Body1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvJumlahPesanan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/screen_margin"
                android:layout_marginTop="@dimen/normal_margin"
                android:textSize="@dimen/_10sdp"
                android:text="@string/jumlah_pesanan_item"
                android:textColor="@color/jungle_green"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvKomoditas" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvJumlahPesananValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/screen_margin"
                android:text="20 Kg"
                android:textAppearance="@style/TextAppearance.Roboto.Black.Body1"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="@id/tvJumlahPesanan"
                app:layout_constraintStart_toEndOf="@id/tvJumlahPesanan"
                app:layout_constraintTop_toTopOf="@id/tvJumlahPesanan" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvKirimAlamat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/screen_margin"
                android:layout_marginTop="@dimen/normal_margin"
                android:text="@string/send_order"
                android:textSize="@dimen/_10sdp"
                android:textColor="@color/jungle_green"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvJumlahPesanan" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvAlamatPengirim"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/screen_margin"
                android:layout_marginTop="@dimen/normal_margin"
                android:text="Jawa barat"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvKirimAlamat" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status"
                android:layout_marginEnd="@dimen/screen_margin"
                android:textColor="@color/jungle_green"
                android:textSize="@dimen/_10sdp"
                app:layout_constraintEnd_toStartOf="@+id/tvStatusValue"
                app:layout_constraintBottom_toBottomOf="@+id/tvStatusValue"
                app:layout_constraintTop_toTopOf="@+id/tvStatusValue" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvStatusValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/screen_margin"
                android:layout_marginTop="@dimen/normal_margin"
                android:text="Ambil di kolam"
                android:textSize="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/screen_margin"
                android:textAppearance="@style/TextAppearance.Roboto.Black.Body2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvAlamatPengirim" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>